VSE: Limit timeline view height

Maximum zoom or view height is now defined by space occupied by strips,
But at least channels 1 to 7 will be always visible. This makes it
overview timeline content by zooming out to maximum extent in Y axis
and panning in X axis.

More channels can be "created" on demand by moving strip to higher
channel.  When any strip is removed from channel, operators, should use
flag `SPACE_SEQ_CLAMP_SMOOTH` to do smooth transition when limiting
height.

Limiting takes into account height of scrubbing and markers area as
well as scrollers. This means that when zoomed out to maximum extent,
no strips are obstructed by fixed UI element.

Fixes T57976, T90964

Demo:
{F12913337}

Maniphest Tasks: T90964, T57976

Differential Revision: https://developer.blender.org/D14263