source/blender/editors/include/UI_view2d.h
@@ -447,7 +447,7 @@ typedef struct View2DEdgePanData {
   struct ARegion *region;
   /** View2d we're operating in. */
   struct View2D *v2d;
-    /* Limit maximum pannable area */
+  /* Limit maximum pannable area */
   struct rctf limit;
 
   /** Panning should only start once being in the inside rect once (e.g. adding nodes can happen
@@ -493,6 +493,11 @@ void UI_view2d_edge_pan_init(struct bContext *C,
                              float max_speed,
                              float delay,
                              float zoom_influence);
+/**
+ * Set area which can be panned
+ */
+void UI_view2d_edge_pan_set_limits(
+    struct View2DEdgePanData *vpd, float xmin, float xmax, float ymin, float ymax);
 
 /**
  * Set area which can be panned
